correction BEM name

--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -256,20 +256,20 @@
             </picture>
           </div>
         </div>
-        <!-- <div class="room-for-3__svg">
-          <svg class="room-for-3__left" width="32" height="32">
+        <!-- <div class="room-for-3-svg">
+          <svg class="room-for-3-svg__left" width="32" height="32">
             <use href="./images/sprite.svg#icon-cil_arrow-left32"></use>
           </svg>
-          <svg class="room-for-3__right" width="32" height="32">
+          <svg class="room-for-3-svg__right" width="32" height="32">
             <use href="./images/sprite.svg#icon-cil_arrow-right32"></use>
           </svg>
         </div> -->
       </div>
       <div class="room-for-3-btn__wrap">
-        <a href="./room-for-3.html" class="room-for-3__details btn"
+        <a href="./room-for-3.html" class="room-for-3-btn__details btn"
           >Детальніше</a
         >
-        <button type="button" class="room-for-3__btn-price btn" data-modal-open>
+        <button type="button" class="room-for-3-btn__price btn" data-modal-open>
           Переглянути ціни
         </button>
       </div>
