added images shadows, carousel shadows, section pseudoelements (vertical stripes)

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -1,4 +1,4 @@
-<section class="about-our-kitchen">
+<section class="about-our-kitchen vertical-left-stripe vertical-right-stripe">
   <div class="container">
     <h2 class="visually-hidden">About our kitchen</h2>
     <p class="about-kitchen__title">Amet minim mollit non</p>
@@ -77,7 +77,7 @@
     <div class="kitchen-slider-box">
       <div class="kitchen-slider">
         <div class="kitchen-slide">
-          <picture>
+          <picture class="test">
             <source
               srcset="
                 ./images/sliders/slider-6-desk.jpg 1x,
@@ -109,7 +109,7 @@
           </picture>
         </div>
         <div class="kitchen-slide">
-          <picture>
+          <picture class="test">
             <source
               srcset="
                 ./images/sliders/slider-7-desk.jpg 1x,
@@ -141,7 +141,7 @@
           </picture>
         </div>
         <div class="kitchen-slide">
-          <picture>
+          <picture class="test">
             <source
               srcset="
                 ./images/sliders/slider-9-desk.jpg 1x,
@@ -173,7 +173,7 @@
           </picture>
         </div>
         <div class="kitchen-slide">
-          <picture>
+          <picture class="test">
             <source
               srcset="
                 ./images/sliders/slider-15-desk.jpg 1x,
@@ -205,7 +205,7 @@
           </picture>
         </div>
         <div class="kitchen-slide">
-          <picture>
+          <picture class="test">
             <source
               srcset="
                 ./images/sliders/slider-16-desk.jpg 1x,
