changed vertical stripes positioning from pixels to vw

--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -181,9 +181,9 @@ div.kitchen-slide {
 }
 
 .vertical-left-stripe::before {
-  left: 140px;
+  left: 34vw;
 }
 
 .vertical-right-stripe::after {
-  left: 274px;
+  left: 66vw;
 }
