added temporary header plug for convenience (html + css), to be deleted before pull request

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -1,3 +1,4 @@
+<header class="header-plug"></header>
 <section class="about-our-kitchen vertical-left-stripe vertical-right-stripe">
   <div class="container">
     <h2 class="visually-hidden">About our kitchen</h2>
