--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -1,3 +1,10 @@
+//HEADER PLUG TO BE DELETED IN HTML AND CSS UPON COMPLETION OF SECTION MARKUP
+.header-plug {
+  display: block;
+  height: 200px;
+  background-color: tomato;
+}
+
 .about-our-kitchen {
   background-color: $colorBgLemon;
   padding-bottom: 20px;
