--- a/src/partials/modal-table.html
+++ b/src/partials/modal-table.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop " data-modal>
     <div class="modal modal-book-table">
       <button type="button" class="modal__btn--close" data-modal-close>
         <svg class="modal__icon--close" width="24" height="24">
