--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -66,8 +66,11 @@
 // КНОПКИ ДЛЯ МОДАЛКИ
 
 .modal__btn {
+  
+  display: inline-block;
   width: 100%;
   height: 64px;
+  padding: 0;
   
   font-family: 'Montserrat';
   font-weight: 500;
@@ -88,6 +91,7 @@
 
   @include mobile {
     width: 384px;
+    
   }
 
   @include tablet {
