add jsquery and slick in the hotel.html

--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -46,7 +46,7 @@
     </ul>
     <div class="room-ror-3__slider-wrap">
       <div class="room-for-3__slider">
-        <div class="room-for-3__bathroom">
+        <div class="room-for-3__bathroom variable-width">
           <picture>
             <source
               srcset="
