several mobile layout geometry fixes; wrapped logo into h3 to improve semantics

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -3,7 +3,7 @@
   <div class="container">
     <h2 class="visually-hidden">About our kitchen</h2>
     <p class="about-kitchen__title">Amet minim mollit non</p>
-    <span class="about-kitchen__logo">MIMIHO</span>
+    <h3><span class="about-kitchen__logo">MIMIHO</span></h3>
 
     <div class="kitchen-card kitchen-card--top">
       <p class="kitchen-card__description kitchen-card__description--gray">
