add padding tablet

--- a/src/partials/modal-table.html
+++ b/src/partials/modal-table.html
@@ -54,7 +54,7 @@
              
            <div class="modal__field">
               
-              <input class="custom-date" type="text" text="Cьогодні" placeholder="Сьогодні" onfocus="(this.type = 'date')" id="table-date" name="table-date">
+              <input class="custom-date" type="text" value="Cьогодні" placeholder="Сьогодні" onfocus="(this.type = 'date')" id="table-date" name="table-date">
               <label class="modal__label" for="table-date">На яку дату бронювати?</label>
               
            </div>
