removed span from the logo for proper geometry, css for tablet fixes

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -2,8 +2,8 @@
 <section class="about-our-kitchen vertical-left-stripe vertical-right-stripe">
   <div class="container">
     <h2 class="visually-hidden">About our kitchen</h2>
-    <p class="about-kitchen__title">Amet minim mollit non</p>
-    <h3><span class="about-kitchen__logo">MIMIHO</span></h3>
+    <p class="about-kitchen__slogan">Amet minim mollit non</p>
+    <h3 class="restaurant-logo">MIMIHO</h3>
 
     <div class="kitchen-card kitchen-card--top">
       <p class="kitchen-card__description kitchen-card__description--gray">
