--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -81,22 +81,22 @@
           <picture class="test">
             <source
               srcset="
-                ./images/sliders/slider-6-desk.jpg 1x,
-                ./images/sliders/slider-6-desk.jpg 2x
+                ./images/sliders/slider-6-desk.jpg    1x,
+                ./images/sliders/slider-6-desk-2x.jpg 2x
               "
               media="(min-width: 1280px)"
             />
             <source
               srcset="
-                ./images/sliders/slider-6-tab.jpg 1x,
-                ./images/sliders/slider-6-tab.jpg 2x
+                ./images/sliders/slider-6-tab.jpg    1x,
+                ./images/sliders/slider-6-tab-2x.jpg 2x
               "
               media="(min-width: 1024px)"
             />
             <source
               srcset="
-                ./images/sliders/slider-6-mob.jpg 1x,
-                ./images/sliders/slider-6-mob.jpg 2x
+                ./images/sliders/slider-6-mob.jpg    1x,
+                ./images/sliders/slider-6-mob-2x.jpg 2x
               "
               media="(min-width: 414px)"
             />
@@ -104,8 +104,7 @@
               class="autoplay__photo"
               src="./images/sliders/slider-6-mob.jpg"
               alt="наливають чай у чашку"
-              width="245"
-              height="245"
+              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
             />
           </picture>
         </div>
@@ -113,22 +112,22 @@
           <picture class="test">
             <source
               srcset="
-                ./images/sliders/slider-7-desk.jpg 1x,
-                ./images/sliders/slider-7-desk.jpg 2x
+                ./images/sliders/slider-7-desk.jpg    1x,
+                ./images/sliders/slider-7-desk-2x.jpg 2x
               "
               media="(min-width: 1280px)"
             />
             <source
               srcset="
-                ./images/sliders/slider-7-tab.jpg 1x,
-                ./images/sliders/slider-7-tab.jpg 2x
+                ./images/sliders/slider-7-tab.jpg    1x,
+                ./images/sliders/slider-7-tab-2x.jpg 2x
               "
               media="(min-width: 1024px)"
             />
             <source
               srcset="
-                ./images/sliders/slider-7-mob.jpg 1x,
-                ./images/sliders/slider-7-mob.jpg 2x
+                ./images/sliders/slider-7-mob.jpg    1x,
+                ./images/sliders/slider-7-mob-2x.jpg 2x
               "
               media="(min-width: 414px)"
             />
@@ -136,8 +135,7 @@
               class="autoplay__photo"
               src="./images/sliders/slider-7-mob.jpg"
               alt="устриці та шампанське"
-              width="245"
-              height="245"
+              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
             />
           </picture>
         </div>
@@ -145,22 +143,22 @@
           <picture class="test">
             <source
               srcset="
-                ./images/sliders/slider-9-desk.jpg 1x,
-                ./images/sliders/slider-9-desk.jpg 2x
+                ./images/sliders/slider-9-desk.jpg    1x,
+                ./images/sliders/slider-9-desk-2x.jpg 2x
               "
               media="(min-width: 1280px)"
             />
             <source
               srcset="
-                ./images/sliders/slider-9-tab.jpg 1x,
-                ./images/sliders/slider-9-tab.jpg 2x
+                ./images/sliders/slider-9-tab.jpg    1x,
+                ./images/sliders/slider-9-tab-2x.jpg 2x
               "
               media="(min-width: 1024px)"
             />
             <source
               srcset="
-                ./images/sliders/slider-9-mob.jpg 1x,
-                ./images/sliders/slider-9-mob.jpg 2x
+                ./images/sliders/slider-9-mob.jpg    1x,
+                ./images/sliders/slider-9-mob-2x.jpg 2x
               "
               media="(min-width: 414px)"
             />
@@ -168,8 +166,7 @@
               class="autoplay__photo"
               src="./images/sliders/slider-9-mob.jpg"
               alt="гарно сервірований стіл на вулиці"
-              width="245"
-              height="245"
+              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
             />
           </picture>
         </div>
@@ -177,22 +174,22 @@
           <picture class="test">
             <source
               srcset="
-                ./images/sliders/slider-15-desk.jpg 1x,
-                ./images/sliders/slider-15-desk.jpg 2x
+                ./images/sliders/slider-15-desk.jpg    1x,
+                ./images/sliders/slider-15-desk-2x.jpg 2x
               "
               media="(min-width: 1280px)"
             />
             <source
               srcset="
-                ./images/sliders/slider-15-tab.jpg 1x,
-                ./images/sliders/slider-15-tab.jpg 2x
+                ./images/sliders/slider-15-tab.jpg    1x,
+                ./images/sliders/slider-15-tab-2x.jpg 2x
               "
               media="(min-width: 1024px)"
             />
             <source
               srcset="
-                ./images/sliders/slider-15-mob.jpg 1x,
-                ./images/sliders/slider-15-mob.jpg 2x
+                ./images/sliders/slider-15-mob.jpg    1x,
+                ./images/sliders/slider-15-mob-2x.jpg 2x
               "
               media="(min-width: 414px)"
             />
@@ -200,8 +197,7 @@
               class="autoplay__photo"
               src="./images/sliders/slider-15-mob.jpg"
               alt="гарно сервірований стіл у приміщенні"
-              width="245"
-              height="245"
+              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
             />
           </picture>
         </div>
@@ -209,22 +205,22 @@
           <picture class="test">
             <source
               srcset="
-                ./images/sliders/slider-16-desk.jpg 1x,
-                ./images/sliders/slider-16-desk.jpg 2x
+                ./images/sliders/slider-16-desk.jpg    1x,
+                ./images/sliders/slider-16-desk-2x.jpg 2x
               "
               media="(min-width: 1280px)"
             />
             <source
               srcset="
-                ./images/sliders/slider-16-tab.jpg 1x,
-                ./images/sliders/slider-16-tab.jpg 2x
+                ./images/sliders/slider-16-tab.jpg    1x,
+                ./images/sliders/slider-16-tab-2x.jpg 2x
               "
               media="(min-width: 1024px)"
             />
             <source
               srcset="
-                ./images/sliders/slider-16-mob.jpg 1x,
-                ./images/sliders/slider-16-mob.jpg 2x
+                ./images/sliders/slider-16-mob.jpg    1x,
+                ./images/sliders/slider-16-mob-2x.jpg 2x
               "
               media="(min-width: 414px)"
             />
@@ -232,8 +228,7 @@
               class="autoplay__photo"
               src="./images/sliders/slider-16-mob.jpg"
               alt="сніданок у ліжко"
-              width="245"
-              height="245"
+              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
             />
           </picture>
         </div>
