--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -91,6 +91,10 @@
 
 .kitchen-card--bottom {
   column-gap: 20px;
+  @include tablet {
+    column-gap: 48px;
+    margin-bottom: -48px;
+  }
 }
 
 .kitchen-card__photo {
@@ -143,7 +147,6 @@
   color: $colorBrown;
   padding-bottom: 20px;
   @include tablet {
-    padding-left: 48px;
     width: 312px;
   }
   @include desktop {
@@ -190,6 +193,10 @@
   margin-right: -15px;
   box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
   border-radius: 2px;
+  @include tablet {
+    width: 388px;
+    margin-left: auto;
+  }
 }
 
 .test {
