--- a/src/sass/components/_modal-table.scss
+++ b/src/sass/components/_modal-table.scss
@@ -4,7 +4,7 @@
     top: 50%;
     left: 50%;
 
-    transform: translate(-50%, -50%) scale(1.1);
+    transform: translate(-50%, -50%);
   
     width: 90%;   
     padding: 60px 15px;
@@ -15,11 +15,11 @@
     border-radius: 2px;
     text-align: center;
   
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%);
     transition: transform $transDuration $cubic;
 
     @include mobile {
-      width: 384px;
+      width: 414px;
     }
 
     @include tablet {
