--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -1,12 +1,12 @@
-<div class="backdrop" data-modal>
+<div class="backdrop" data-modal >
   <!-- is-hidden -->
   <div class="modal-price">
       <button type="button" class="modal-price__close" data-modal-close>
       <svg class="modal-price__close-icon" width="24" height="24">
           <use href="./images/sprite.svg#icon-close"></use>
-          <!-- symbol-defs.svg#icon-close -->
       </svg>
       </button>
+
       <p class="modal-price__title price-form">ЦІНИ НА НОМЕР</p>
       <p class="modal-price__sub-title price-form">Двомісний люкс</p>
       
@@ -24,17 +24,17 @@
                 placeholder="1"
                 required
               />
-              <select name="number-cast" id="select-cast" class="modal-price__select">
+              <select name="number-cast" id="select-cast" class="modal-price__select custom-select-arrow">
                 <option value="1">Одна</option>
                 <option value="2">Дві</option>
                 <option value="3">Три</option>
                 <option value="4">Чотири</option>
                 <option value="5">П'ять</option>
               </select>
-              <div class="shade"></div>
-              <svg class="modal-price__icon" for="select-cast"  width="24" height="24"> 
+              <!-- <div class="shade"></div> -->
+              <!-- <svg class="modal-price__icon" for="select-cast"  width="24" height="24"> 
                 <use href="./images/sprite.svg#icon-ep_arrow-down-bold"></use>
-              </svg>
+              </svg> -->
               
   
             </div>
