added mid vertical stripe, finished tablet layout

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -1,6 +1,6 @@
 <header class="header-plug"></header>
 <section class="about-our-kitchen vertical-left-stripe vertical-right-stripe">
-  <div class="container">
+  <div class="container vertical-mid-stripe">
     <h2 class="visually-hidden">About our kitchen</h2>
     <p class="about-kitchen__slogan">Amet minim mollit non</p>
     <h3 class="restaurant-logo">MIMIHO</h3>
