--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -11,7 +11,7 @@
         sint. Velit officia consequat duis enim velit mollit. Exercitation
         veniam consequat sunt nostrud amet.
       </p>
-      <picture class="kitchen-card__photo kitchen-card__photo--top">
+      <picture class="kitchen-card__photo">
         <source
           srcset="
             ./images/restaurant/restaurant-1-desk.jpg    1x,
@@ -36,12 +36,13 @@
         <img
           src="./images/restaurant/restaurant-1-mob.jpg"
           alt="повар готує на кухні"
+          sizes="(min-width: 1280px) 460px, (min-width: 1024px) 400px, (min-width: 414px) 244px, 80vw"
         />
       </picture>
     </div>
 
     <div class="kitchen-card kitchen-card--bottom">
-      <picture class="kitchen-card__photo kitchen-card__photo--bottom">
+      <picture class="kitchen-card__photo">
         <source
           srcset="
             ./images/restaurant/restaurant-2-desk.jpg    1x,
@@ -66,6 +67,7 @@
         <img
           src="./images/restaurant/restaurant-2-mob.jpg"
           alt="м'ясо на дошці для нарізання"
+          sizes="(min-width: 1280px) 460px, (min-width: 1024px) 350px, (min-width: 414px) 200px, 40vw"
         />
       </picture>
       <p class="kitchen-card__description kitchen-card__description--orange">
