finished section markup, responsive

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -1,4 +1,3 @@
-<header class="header-plug"></header>
 <section class="about-our-kitchen vertical-left-stripe vertical-right-stripe">
   <div class="container vertical-mid-stripe">
     <h2 class="visually-hidden">About our kitchen</h2>
@@ -70,6 +69,7 @@
           sizes="(min-width: 1280px) 460px, (min-width: 1024px) 350px, (min-width: 414px) 200px, 40vw"
         />
       </picture>
+
       <p class="kitchen-card__description kitchen-card__description--orange">
         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
         sint. Velit officia consequat duis enim velit mollit. Exercitation
@@ -80,7 +80,7 @@
     <div class="kitchen-slider-box">
       <div class="kitchen-slider">
         <div class="kitchen-slide">
-          <picture class="test">
+          <picture>
             <source
               srcset="
                 ./images/sliders/slider-6-desk.jpg    1x,
@@ -111,7 +111,7 @@
           </picture>
         </div>
         <div class="kitchen-slide">
-          <picture class="test">
+          <picture>
             <source
               srcset="
                 ./images/sliders/slider-7-desk.jpg    1x,
@@ -142,7 +142,7 @@
           </picture>
         </div>
         <div class="kitchen-slide">
-          <picture class="test">
+          <picture>
             <source
               srcset="
                 ./images/sliders/slider-9-desk.jpg    1x,
@@ -173,7 +173,7 @@
           </picture>
         </div>
         <div class="kitchen-slide">
-          <picture class="test">
+          <picture>
             <source
               srcset="
                 ./images/sliders/slider-15-desk.jpg    1x,
@@ -204,7 +204,7 @@
           </picture>
         </div>
         <div class="kitchen-slide">
-          <picture class="test">
+          <picture>
             <source
               srcset="
                 ./images/sliders/slider-16-desk.jpg    1x,
