--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -1,10 +1,3 @@
-//HEADER PLUG TO BE DELETED IN HTML AND CSS UPON COMPLETION OF SECTION MARKUP
-.header-plug {
-  display: block;
-  height: 200px;
-  background-color: tomato;
-}
-
 // VERTICAL SECTION STRIPES
 .vertical-mid-stripe::before,
 .vertical-left-stripe::before,
@@ -14,8 +7,7 @@
   z-index: 1;
   width: 0;
   height: 0;
-  // border: 1px solid rgba(186, 186, 186, 0.4);
-  border: 1px solid red;
+  border: 1px solid rgba(186, 186, 186, 0.4);
   filter: blur(0.5px);
   position: absolute;
   top: 0;
@@ -32,6 +24,9 @@
   @include tablet {
     left: 27vw;
   }
+  @include desktop {
+    left: 26vw;
+  }
 }
 
 .vertical-mid-stripe::before {
@@ -47,6 +42,9 @@
   left: 66vw;
   @include tablet {
     left: 73vw;
+  }
+  @include desktop {
+    left: 74vw;
   }
 }
 
@@ -102,12 +100,11 @@
 
 .kitchen-card--top {
   flex-wrap: wrap;
-  position: relative;
   @include tablet {
     margin-bottom: 338px;
   }
   @include desktop {
-    margin-bottom: 162px;
+    margin-bottom: 350px;
   }
   .kitchen-card__description {
     width: 258px;
@@ -130,8 +127,8 @@
       top: -286px;
     }
     @include desktop {
-      right: 85px;
-      top: -310px;
+      right: 95px;
+      top: -286px;
     }
   }
 }
@@ -140,11 +137,10 @@
   align-items: center;
   column-gap: 20px;
   @include tablet {
-    column-gap: 48px;
     margin-bottom: 154px;
   }
   @include desktop {
-    column-gap: 32px;
+    margin-bottom: 124px;
   }
   .kitchen-card__description {
     padding-bottom: 20px;
@@ -155,6 +151,7 @@
       margin-right: 220px;
     }
     @include desktop {
+      margin-right: 305px;
     }
   }
   .kitchen-card__photo {
@@ -163,8 +160,7 @@
       left: 0;
     }
     @include desktop {
-      right: 85px;
-      top: -310px;
+      top: -188px;
     }
   }
 }
@@ -231,6 +227,9 @@
     padding-left: 0;
     padding-right: 13px;
   }
+  @include desktop {
+    padding-right: 0;
+  }
 }
 
 .kitchen-slider {
@@ -243,9 +242,12 @@
     margin-left: auto;
     margin-right: 0;
   }
+  @include desktop {
+    width: 530px;
+  }
 }
 
-.test {
+.kitchen-slide {
   img {
     display: block;
     box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
