added stripes height for desktop

--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -17,6 +17,9 @@
   @include tablet {
     height: 1238px;
   }
+  @include desktop {
+    height: 1260px;
+  }
 }
 
 .vertical-left-stripe::before {
