wrapped kitchen cards into a technical container, removed extra classes and called containers with first & last child instead

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -4,77 +4,79 @@
     <p class="about-kitchen__slogan">Amet minim mollit non</p>
     <h3 class="restaurant-logo">MIMIHO</h3>
 
-    <div class="kitchen-card kitchen-card--top">
-      <p class="kitchen-card__description kitchen-card__description--gray">
-        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-        sint. Velit officia consequat duis enim velit mollit. Exercitation
-        veniam consequat sunt nostrud amet.
-      </p>
-      <picture class="kitchen-card__photo">
-        <source
-          srcset="
-            ./images/restaurant/restaurant-1-desk.jpg    1x,
-            ./images/restaurant/restaurant-1-desk-2x.jpg 2x
-          "
-          media="(min-width: 1280px)"
-        />
-        <source
-          srcset="
-            ./images/restaurant/restaurant-1-tab.jpg    1x,
-            ./images/restaurant/restaurant-1-tab-2x.jpg 2x
-          "
-          media="(min-width: 1024px)"
-        />
-        <source
-          srcset="
-            ./images/restaurant/restaurant-1-mob.jpg    1x,
-            ./images/restaurant/restaurant-1-mob-2x.jpg 2x
-          "
-          media="(min-width: 414px)"
-        />
-        <img
-          src="./images/restaurant/restaurant-1-mob.jpg"
-          alt="повар готує на кухні"
-          sizes="(min-width: 1280px) 460px, (min-width: 1024px) 400px, (min-width: 414px) 244px, 80vw"
-        />
-      </picture>
-    </div>
+    <div>
+      <div class="kitchen-card">
+        <p class="kitchen-card__description kitchen-card__description--gray">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </p>
+        <picture class="kitchen-card__photo">
+          <source
+            srcset="
+              ./images/restaurant/restaurant-1-desk.jpg    1x,
+              ./images/restaurant/restaurant-1-desk-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/restaurant/restaurant-1-tab.jpg    1x,
+              ./images/restaurant/restaurant-1-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/restaurant/restaurant-1-mob.jpg    1x,
+              ./images/restaurant/restaurant-1-mob-2x.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            src="./images/restaurant/restaurant-1-mob.jpg"
+            alt="повар готує на кухні"
+            sizes="(min-width: 1280px) 460px, (min-width: 1024px) 400px, (min-width: 414px) 244px, 80vw"
+          />
+        </picture>
+      </div>
 
-    <div class="kitchen-card kitchen-card--bottom">
-      <picture class="kitchen-card__photo">
-        <source
-          srcset="
-            ./images/restaurant/restaurant-2-desk.jpg    1x,
-            ./images/restaurant/restaurant-2-desk-2x.jpg 2x
-          "
-          media="(min-width: 1280px)"
-        />
-        <source
-          srcset="
-            ./images/restaurant/restaurant-2-tab.jpg    1x,
-            ./images/restaurant/restaurant-2-tab-2x.jpg 2x
-          "
-          media="(min-width: 1024px)"
-        />
-        <source
-          srcset="
-            ./images/restaurant/restaurant-2-mob.jpg    1x,
-            ./images/restaurant/restaurant-2-mob-2x.jpg 2x
-          "
-          media="(min-width: 414px)"
-        />
-        <img
-          src="./images/restaurant/restaurant-2-mob.jpg"
-          alt="м'ясо на дошці для нарізання"
-          sizes="(min-width: 1280px) 460px, (min-width: 1024px) 350px, (min-width: 414px) 200px, 40vw"
-        />
-      </picture>
+      <div class="kitchen-card">
+        <picture class="kitchen-card__photo">
+          <source
+            srcset="
+              ./images/restaurant/restaurant-2-desk.jpg    1x,
+              ./images/restaurant/restaurant-2-desk-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/restaurant/restaurant-2-tab.jpg    1x,
+              ./images/restaurant/restaurant-2-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/restaurant/restaurant-2-mob.jpg    1x,
+              ./images/restaurant/restaurant-2-mob-2x.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            src="./images/restaurant/restaurant-2-mob.jpg"
+            alt="м'ясо на дошці для нарізання"
+            sizes="(min-width: 1280px) 460px, (min-width: 1024px) 350px, (min-width: 414px) 200px, 40vw"
+          />
+        </picture>
 
-      <p class="kitchen-card__description kitchen-card__description--orange">
-        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-        sint. Velit officia consequat duis enim velit mollit. Exercitation
-        veniam consequat sunt nostrud amet.
-      </p>
+        <p class="kitchen-card__description kitchen-card__description--orange">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </p>
+      </div>
     </div>
 
     <div class="kitchen-slider-box">
