room-luxe-amenities-changes-and-improvements

--- a/src/partials/pages/room-luxe/amenities.html
+++ b/src/partials/pages/room-luxe/amenities.html
@@ -8,7 +8,7 @@
       consequat sunt nostrud amet.
     </p>
 
-    <ul class="amenities__list">
+    <ul class="list">
       <li>
         <h3 class="amenities__subtitle">Загальні</h3>
         <div class="amenities__box">
@@ -28,7 +28,7 @@
       </li>
       <li>
         <h3 class="amenities__subtitle">Ванна кімната</h3>
-        <div class="amenities__box-third">
+        <div class="amenities__box-second">
           <p class="amenities__discription-additional">
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
             sint. Velit officia consequat duis enim velit mollit. Exercitation
@@ -77,7 +77,9 @@
       </li>
     </ul>
 
-    <button class="button" data-modal-open>Оформити бронювання</button>
+    <div class="menu__wrap">
+      <button class="button" data-modal-open>Оформити бронювання</button>
+    </div>
     <a href="./hotel.html" class="link__amenities"
       >Повернутися до перегляду номерів
       <svg width="24" height="24" class="amenities__icon">
