--- a/src/sass/pages/room-luxe/_amenities.scss
+++ b/src/sass/pages/room-luxe/_amenities.scss
@@ -109,7 +109,7 @@ margin-bottom: 32px;
 
     }
 
-   .button {
+ button {
     
         // background-color: $colorBtnBlack;
         // color: $colorBtnWhite;
@@ -126,7 +126,6 @@ margin-bottom: 32px;
         // white-space: nowrap;
 
        
-
         @include mobimax {
             font-size: 14px;
             padding: 15px 30px;
@@ -155,9 +154,9 @@ margin-bottom: 32px;
            
         }
 
-        @include desktop {
-            
-        }
+        // @include desktop {
+         
+        // }
     }
 
     &__icon {
@@ -167,13 +166,7 @@ margin-bottom: 32px;
         fill: currentColor;
     }
 
-    &__list {
-        list-style-type: none;
-            margin-top: 0;
-            margin-bottom: 0;
-            padding-left: 0;
-    }
-
+    
     &__box {
         @include tablet {
             display: flex;
@@ -191,6 +184,7 @@ margin-bottom: 32px;
 
         @include tablet {
             width: 757px;
+            
         }
     }
 
@@ -206,7 +200,7 @@ margin-bottom: 32px;
         }
     }
 
-    &__box-third {
+    &__box-second {
         @include tablet {
             display: flex;
             flex-wrap: wrap;
@@ -246,7 +240,7 @@ margin-bottom: 32px;
     }
 
     @include tablet {
-
+        justify-content: flex-end;
         font-size: 20px;
         line-height: 1.2;
         margin-left: 497px;
@@ -255,11 +249,16 @@ margin-bottom: 32px;
     @include desktop {
         margin-left: 563px;
     }
+        transition: color 250ms linear;
+    
+        &:hover,
+        &:focus {
+            color: $colorAccentYellow;
+}
+}
 
-    transition: color 250ms linear;
+.menu__wrap {
+    text-align: right;
+    margin-bottom: 32px;
 
-    &:hover,
-    &:focus {
-        color: $colorAccentYellow;
-    }
 }
